--- a/web/templates/search.html
+++ b/web/templates/search.html
@@ -27,7 +27,7 @@
             <form method="post" id="search-form">
                 <label for="search-box" hidden>Search</label>
                 <input name="keywords" id="search-box" value="{{ keywords }}">
-                <input type="submit" id="searchSubmit" value="Search">
+                <input type="submit" id="search-submit" value="Search">
             </form>
         </div>
 
