--- a/web/static/style.css
+++ b/web/static/style.css
@@ -1,3 +1,5 @@
+
+/*=============================== Base ===============================*/
 body {
     font-family: 'ProximaNova-Regular','HelveticaNeue','Helvetica Neue','HelveticaNeueRoman','HelveticaNeue-Roman','Helvetica Neue Roman','TeXGyreHerosRegular','Helvetica','Tahoma','Geneva','Arial',sans-serif;
     width: 70%;
@@ -23,18 +25,49 @@ nav {
 .nav-li-a {
     display: block;
     width: 60px;
-    padding: auto;
+    text-align: center;
 }
 
 
+
+/*=============================== Login Overlay ===============================*/
+
+
+#login-overlay {
+    width: 300px;
+    height: 100px;
+    position: fixed;
+    top: 30%;
+    padding: 50px;
+    left: calc(50% - 150px);
+    background: white;
+    border-width: 1px;
+    border-style: solid;
+    text-align: center;
+}
+
+#login-overlay-close {
+    position: absolute;
+    right: 10px;
+    top: 10px;
+}
+
+#login-overlay-form {
+
+}
+
+
+/*=============================== Search ===============================*/
+
 .search {
-    height: 30px;
+    height: 40px;
 }
 
 .search-bar {
+    height: 30px;
     max-width: 600px;
     min-width: 500px;
-    margin: auto;
+    margin: 10px auto 0;
     display: flex;
 }
 
@@ -61,4 +94,33 @@ nav {
     background: white;
 }
 
+.result-overview {
+    color: grey;
+}
 
+
+
+
+
+
+/*=============================== Documents ===============================*/
+
+.document {
+
+}
+
+.document-block {
+    margin-bottom: 20px;
+}
+
+.document-overview {
+    width: 100%;
+}
+
+.document-keyFeatures {
+    list-style-type: circle;
+}
+
+.document-keyApplications {
+    list-style-type: circle;
+}
