--- a/web/templates/demo.html
+++ b/web/templates/demo.html
@@ -31,13 +31,13 @@
 </section>
 
 
-<section class="catNav">
+<section class="catNav catNav__borderAdjust">
     <div class="catNav catNav__wrapper">
-        <div class="catNav__cat">Category</div>
-        <div class="catNav__cat">Category</div>
-        <div class="catNav__cat">Category</div>
-        <div class="catNav__cat">Category</div>
-        <div class="catNav__cat">Category</div>
+        <div class="catNav catNav__cat"><p class="catNav__text">Category</p></div>
+        <div class="catNav catNav__cat"><p class="catNav__text">Category</p></div>
+        <div class="catNav catNav__cat"><p class="catNav__text">Category</p></div>
+        <div class="catNav catNav__cat"><p class="catNav__text">Category</p></div>
+        <div class="catNav catNav__cat"><p class="catNav__text">Category</p></div>
     </div>
 </section>
 
@@ -46,11 +46,15 @@
 
 <section class="sidebar">
     <div class="sidebar-divisions__wrapper">
-        <p class="sidebar-divisions__division">All Divisions</p>
-        <p class="sidebar-divisions__division">Division 1</p>
-        <p class="sidebar-divisions__division">Division 2</p>
-        <p class="sidebar-divisions__division">Division 3</p>
-        <p class="sidebar-divisions__division">Division 4</p>
+        <div class="sidebar-divisions__division division--top">
+            <p class="sidebar-divisions__text">All Divisions</p>
+        </div>
+        <div class="sidebar-divisions__division"><p class="sidebar-divisions__text">Division 1</p></div>
+        <div class="sidebar-divisions__division border--right"><p class="sidebar-divisions__text">Division 2</p></div>
+        <div class="sidebar-divisions__division"><p class="sidebar-divisions__text">Division 3</p></div>
+        <div class="sidebar-divisions__division border--right"><p class="sidebar-divisions__text">Division 4</p></div>
+        <div class="sidebar-divisions__division"><p class="sidebar-divisions__text">Division 5</p></div>
+        <div class="sidebar-divisions__division border--right"><p class="sidebar-divisions__text">Division 6</p></div>
     </div>
 
     <div class="sidebar-refine__wrapper">
@@ -69,6 +73,14 @@
 </section>
 
 <section class="result">
+    <div class="result-description__wrapper">
+        <p class="result-description__text">Search results for</p>
+    </div>
+    <div class="result-block">Result</div>
+    <div class="result-block">Result</div>
+    <div class="result-block">Result</div>
+    <div class="result-block">Result</div>
+    <div class="result-block">Result</div>
     <div class="result-block">Result</div>
     <div class="result-block">Result</div>
     <div class="result-block">Result</div>
