--- a/web/templates/demo.html
+++ b/web/templates/demo.html
@@ -33,11 +33,11 @@
 
 <section class="catNav catNav__borderAdjust">
     <div class="catNav catNav__wrapper">
-        <div class="catNav catNav__cat"><p class="catNav__text">Category</p></div>
-        <div class="catNav catNav__cat"><p class="catNav__text">Category</p></div>
-        <div class="catNav catNav__cat"><p class="catNav__text">Category</p></div>
-        <div class="catNav catNav__cat"><p class="catNav__text">Category</p></div>
-        <div class="catNav catNav__cat"><p class="catNav__text">Category</p></div>
+        <div class="catNav catNav__cat"><p class="catNav__text">Campus</p></div>
+        <div class="catNav catNav__cat"><p class="catNav__text">Material</p></div>
+        <div class="catNav catNav__cat"><p class="catNav__text">Characterization</p></div>
+        <div class="catNav catNav__cat"><p class="catNav__text">Manufacturing</p></div>
+        <div class="catNav catNav__cat"><p class="catNav__text">Other Categories</p></div>
     </div>
 </section>
 
@@ -47,26 +47,31 @@
 <section class="sidebar">
     <div class="sidebar-divisions__wrapper">
         <div class="sidebar-divisions__division division--top">
-            <p class="sidebar-divisions__text">All Divisions</p>
+            <a class="sidebar-divisions__text" href="#">Search All Divisions</a>
         </div>
-        <div class="sidebar-divisions__division"><p class="sidebar-divisions__text">Division 1</p></div>
-        <div class="sidebar-divisions__division border--right"><p class="sidebar-divisions__text">Division 2</p></div>
-        <div class="sidebar-divisions__division"><p class="sidebar-divisions__text">Division 3</p></div>
-        <div class="sidebar-divisions__division border--right"><p class="sidebar-divisions__text">Division 4</p></div>
-        <div class="sidebar-divisions__division"><p class="sidebar-divisions__text">Division 5</p></div>
-        <div class="sidebar-divisions__division border--right"><p class="sidebar-divisions__text">Division 6</p></div>
+        <div class="sidebar-divisions__division">
+            <a class="sidebar-divisions__text" href="#">SMCF</a></div>
+        <div class="sidebar-divisions__division border--right">
+            <a class="sidebar-divisions__text" href="#">BSD</a></div>
+        <div class="sidebar-divisions__division">
+            <a class="sidebar-divisions__text" href="#">Geosci</a></div>
+        <div class="sidebar-divisions__division border--right">
+            <a class="sidebar-divisions__text" href="#">MRSEC</a></div>
+        <div class="sidebar-divisions__division border--radius__left">
+            <a class="sidebar-divisions__text" href="#">PNF</a></div>
+        <div class="sidebar-divisions__division border--right border--radius__right">
+            <a class="sidebar-divisions__text" href="#">Other</a></div>
     </div>
 
     <div class="sidebar-refine__wrapper">
         <p class="sidebar-refine__cat">Tags</p>
         <ul class="sidebar-refine__list">
-            <li class="sidebar-refine__item">tag1</li>
-            <li class="sidebar-refine__item">tag2</li>
-            <li class="sidebar-refine__item">tag3</li>
-            <li class="sidebar-refine__item">tag4</li>
-            <li class="sidebar-refine__item">tag5</li>
-            <li class="sidebar-refine__item">tag6</li>
-            <li class="sidebar-refine__item">tag7</li>
+            <li class="sidebar-refine__item">Ancillary</li>
+            <li class="sidebar-refine__item">Characterization</li>
+            <li class="sidebar-refine__item">Etching</li>
+            <li class="sidebar-refine__item">Process Benches</li>
+            <li class="sidebar-refine__item">Lithography</li>
+            <li class="sidebar-refine__item">More ... </li>
         </ul>
 
     </div>
@@ -76,15 +81,27 @@
     <div class="result-description__wrapper">
         <p class="result-description__text">Search results for</p>
     </div>
-    <div class="result-block">Result</div>
-    <div class="result-block">Result</div>
-    <div class="result-block">Result</div>
-    <div class="result-block">Result</div>
-    <div class="result-block">Result</div>
-    <div class="result-block">Result</div>
-    <div class="result-block">Result</div>
-    <div class="result-block">Result</div>
-    <div class="result-block">Result</div>
+    <div class="result-block"></div>
+    <div class="result-block"></div>
+    <div class="result-block"></div>
+    <div class="result-block"></div>
+    <div class="result-block"></div>
+    <div class="result-block"></div>
+    <div class="result-block"></div>
+    <div class="result-block"></div>
+    <div class="result-block"></div>
+
+    <div class="result-pages__wrapper">
+        <ul class="result-pages__list">
+            <li class="result-pages__item">1</li>
+            <li class="result-pages__item">2</li>
+            <li class="result-pages__item">3</li>
+            <li class="result-pages__item">4</li>
+            <li class="result-pages__item">5</li>
+            <li class="result-pages__item">...</li>
+            <li class="result-pages__item">9</li>
+        </ul>
+    </div>
 </section>
 
 <section class="footer">
