added category dropdown

--- a/web/templates/demo.html
+++ b/web/templates/demo.html
@@ -33,15 +33,62 @@
 
 <section class="catNav catNav__borderAdjust">
     <div class="catNav catNav__wrapper">
-        <div class="catNav catNav__cat"><p class="catNav__text">Campus</p></div>
-        <div class="catNav catNav__cat"><p class="catNav__text">Material</p></div>
-        <div class="catNav catNav__cat"><p class="catNav__text">Characterization</p></div>
-        <div class="catNav catNav__cat"><p class="catNav__text">Manufacturing</p></div>
-        <div class="catNav catNav__cat"><p class="catNav__text">Other Categories</p></div>
+        <div class="catNav catNav__cat" id="cat1"><p class="catNav__text">Campus</p></div>
+        <div class="catNav catNav__cat" id="cat2"><p class="catNav__text">Material</p></div>
+        <div class="catNav catNav__cat" id="cat3"><p class="catNav__text">Characterization</p></div>
+        <div class="catNav catNav__cat" id="cat4"><p class="catNav__text">Manufacturing</p></div>
+        <div class="catNav catNav__cat" id="cat5"><p class="catNav__text">Other Categories</p></div>
     </div>
 </section>
 
-<section class="catDropdown"></section>
+<section class="catDropdown">
+    <div class="catDropdown__bucket">
+        <p class="catDropdown__text">Bucket 1</p>
+        <input type="radio" class="catDropdown__item">Choice 1<br>
+        <input type="radio" class="catDropdown__item">Choice 2<br>
+        <input type="radio" class="catDropdown__item">Choice 3<br>
+        <input type="radio" class="catDropdown__item">Choice 4<br>
+        <input type="radio" class="catDropdown__item">Choice 5<br>
+        <input type="radio" class="catDropdown__item">Choice 6<br>
+        <input type="radio" class="catDropdown__item">Choice 7
+    </div>
+
+    <div class="catDropdown__bucket">
+        <p class="catDropdown__text">Bucket 1</p>
+        <input type="radio" class="catDropdown__item">Choice 1<br>
+        <input type="radio" class="catDropdown__item">Choice 2<br>
+        <input type="radio" class="catDropdown__item">Choice 3<br>
+        <input type="radio" class="catDropdown__item">Choice 4<br>
+        <input type="radio" class="catDropdown__item">Choice 5<br>
+        <input type="radio" class="catDropdown__item">Choice 6<br>
+        <input type="radio" class="catDropdown__item">Choice 7
+    </div>
+
+    <div class="catDropdown__bucket">
+        <p class="catDropdown__text">Bucket 2</p>
+        <input type="radio" class="catDropdown__item">Choice 1<br>
+        <input type="radio" class="catDropdown__item">Choice 2<br>
+        <input type="radio" class="catDropdown__item">Choice 3<br>
+        <input type="radio" class="catDropdown__item">Choice 4<br>
+        <input type="radio" class="catDropdown__item">Choice 5
+    </div>
+
+    <div class="catDropdown__bucket">
+        <p class="catDropdown__text">Bucket 3</p>
+        <input type="radio" class="catDropdown__item">Choice 1<br>
+        <input type="radio" class="catDropdown__item">Choice 2<br>
+        <input type="radio" class="catDropdown__item">Choice 3<br>
+        <input type="radio" class="catDropdown__item">Choice 4<br>
+        <input type="radio" class="catDropdown__item">Choice 5<br>
+        <input type="radio" class="catDropdown__item">Choice 6
+    </div>
+
+    <div class="catDropdown__bucket">
+        <p class="catDropdown__text">Bucket 4</p>
+        <input type="radio" class="catDropdown__item">Choice 1<br>
+        <input type="radio" class="catDropdown__item">Choice 2
+    </div>
+</section>
 
 
 <section class="sidebar">
