--- a/web/static/demo.css
+++ b/web/static/demo.css
@@ -193,6 +193,26 @@ p {
 }
 
 
+/* ============== dropdown ============== */
+.catDropdown {
+    position: absolute;
+    top: 181px;
+    width: 70%;
+    max-width: 960px;
+    min-width: 460px;
+    margin: auto 20px;
+    display: none;
+    border: 1px solid gray;
+    border-top: 0;
+    background: lightgray;
+}
+
+.catDropdown__bucket {
+    margin: 20px auto;
+}
+
+
+
 /* =============== result =============== */
 
 .result {
