--- a/web/templates/demo.html
+++ b/web/templates/demo.html
@@ -41,7 +41,203 @@
     </div>
 </section>
 
-<section class="catDropdown">
+<section class="catDropdown" id="cat1Dropdown">
+    <div class="catDropdown__bucket">
+        <p class="catDropdown__text">Bucket 1</p>
+        <input type="radio" class="catDropdown__item">Choice 1<br>
+        <input type="radio" class="catDropdown__item">Choice 2<br>
+        <input type="radio" class="catDropdown__item">Choice 3<br>
+        <input type="radio" class="catDropdown__item">Choice 4<br>
+        <input type="radio" class="catDropdown__item">Choice 5<br>
+        <input type="radio" class="catDropdown__item">Choice 6<br>
+        <input type="radio" class="catDropdown__item">Choice 7
+    </div>
+
+    <div class="catDropdown__bucket">
+        <p class="catDropdown__text">Bucket 1</p>
+        <input type="radio" class="catDropdown__item">Choice 1<br>
+        <input type="radio" class="catDropdown__item">Choice 2<br>
+        <input type="radio" class="catDropdown__item">Choice 3<br>
+        <input type="radio" class="catDropdown__item">Choice 4<br>
+        <input type="radio" class="catDropdown__item">Choice 5<br>
+        <input type="radio" class="catDropdown__item">Choice 6<br>
+        <input type="radio" class="catDropdown__item">Choice 7
+    </div>
+
+    <div class="catDropdown__bucket">
+        <p class="catDropdown__text">Bucket 2</p>
+        <input type="radio" class="catDropdown__item">Choice 1<br>
+        <input type="radio" class="catDropdown__item">Choice 2<br>
+        <input type="radio" class="catDropdown__item">Choice 3<br>
+        <input type="radio" class="catDropdown__item">Choice 4<br>
+        <input type="radio" class="catDropdown__item">Choice 5
+    </div>
+
+    <div class="catDropdown__bucket">
+        <p class="catDropdown__text">Bucket 3</p>
+        <input type="radio" class="catDropdown__item">Choice 1<br>
+        <input type="radio" class="catDropdown__item">Choice 2<br>
+        <input type="radio" class="catDropdown__item">Choice 3<br>
+        <input type="radio" class="catDropdown__item">Choice 4<br>
+        <input type="radio" class="catDropdown__item">Choice 5<br>
+        <input type="radio" class="catDropdown__item">Choice 6
+    </div>
+
+    <div class="catDropdown__bucket">
+        <p class="catDropdown__text">Bucket 4</p>
+        <input type="radio" class="catDropdown__item">Choice 1<br>
+        <input type="radio" class="catDropdown__item">Choice 2
+    </div>
+</section>
+
+<section class="catDropdown" id="cat2Dropdown">
+    <div class="catDropdown__bucket">
+        <p class="catDropdown__text">Bucket 1</p>
+        <input type="radio" class="catDropdown__item">Choice 1<br>
+        <input type="radio" class="catDropdown__item">Choice 2<br>
+        <input type="radio" class="catDropdown__item">Choice 3<br>
+        <input type="radio" class="catDropdown__item">Choice 4<br>
+        <input type="radio" class="catDropdown__item">Choice 5<br>
+        <input type="radio" class="catDropdown__item">Choice 6<br>
+        <input type="radio" class="catDropdown__item">Choice 7
+    </div>
+
+    <div class="catDropdown__bucket">
+        <p class="catDropdown__text">Bucket 1</p>
+        <input type="radio" class="catDropdown__item">Choice 1<br>
+        <input type="radio" class="catDropdown__item">Choice 2<br>
+        <input type="radio" class="catDropdown__item">Choice 3<br>
+        <input type="radio" class="catDropdown__item">Choice 4<br>
+        <input type="radio" class="catDropdown__item">Choice 5<br>
+        <input type="radio" class="catDropdown__item">Choice 6<br>
+        <input type="radio" class="catDropdown__item">Choice 7
+    </div>
+
+    <div class="catDropdown__bucket">
+        <p class="catDropdown__text">Bucket 2</p>
+        <input type="radio" class="catDropdown__item">Choice 1<br>
+        <input type="radio" class="catDropdown__item">Choice 2<br>
+        <input type="radio" class="catDropdown__item">Choice 3<br>
+        <input type="radio" class="catDropdown__item">Choice 4<br>
+        <input type="radio" class="catDropdown__item">Choice 5
+    </div>
+
+    <div class="catDropdown__bucket">
+        <p class="catDropdown__text">Bucket 3</p>
+        <input type="radio" class="catDropdown__item">Choice 1<br>
+        <input type="radio" class="catDropdown__item">Choice 2<br>
+        <input type="radio" class="catDropdown__item">Choice 3<br>
+        <input type="radio" class="catDropdown__item">Choice 4<br>
+        <input type="radio" class="catDropdown__item">Choice 5<br>
+        <input type="radio" class="catDropdown__item">Choice 6
+    </div>
+
+    <div class="catDropdown__bucket">
+        <p class="catDropdown__text">Bucket 4</p>
+        <input type="radio" class="catDropdown__item">Choice 1<br>
+        <input type="radio" class="catDropdown__item">Choice 2
+    </div>
+</section>
+
+<section class="catDropdown" id="cat3Dropdown">
+    <div class="catDropdown__bucket">
+        <p class="catDropdown__text">Bucket 1</p>
+        <input type="radio" class="catDropdown__item">Choice 1<br>
+        <input type="radio" class="catDropdown__item">Choice 2<br>
+        <input type="radio" class="catDropdown__item">Choice 3<br>
+        <input type="radio" class="catDropdown__item">Choice 4<br>
+        <input type="radio" class="catDropdown__item">Choice 5<br>
+        <input type="radio" class="catDropdown__item">Choice 6<br>
+        <input type="radio" class="catDropdown__item">Choice 7
+    </div>
+
+    <div class="catDropdown__bucket">
+        <p class="catDropdown__text">Bucket 1</p>
+        <input type="radio" class="catDropdown__item">Choice 1<br>
+        <input type="radio" class="catDropdown__item">Choice 2<br>
+        <input type="radio" class="catDropdown__item">Choice 3<br>
+        <input type="radio" class="catDropdown__item">Choice 4<br>
+        <input type="radio" class="catDropdown__item">Choice 5<br>
+        <input type="radio" class="catDropdown__item">Choice 6<br>
+        <input type="radio" class="catDropdown__item">Choice 7
+    </div>
+
+    <div class="catDropdown__bucket">
+        <p class="catDropdown__text">Bucket 2</p>
+        <input type="radio" class="catDropdown__item">Choice 1<br>
+        <input type="radio" class="catDropdown__item">Choice 2<br>
+        <input type="radio" class="catDropdown__item">Choice 3<br>
+        <input type="radio" class="catDropdown__item">Choice 4<br>
+        <input type="radio" class="catDropdown__item">Choice 5
+    </div>
+
+    <div class="catDropdown__bucket">
+        <p class="catDropdown__text">Bucket 3</p>
+        <input type="radio" class="catDropdown__item">Choice 1<br>
+        <input type="radio" class="catDropdown__item">Choice 2<br>
+        <input type="radio" class="catDropdown__item">Choice 3<br>
+        <input type="radio" class="catDropdown__item">Choice 4<br>
+        <input type="radio" class="catDropdown__item">Choice 5<br>
+        <input type="radio" class="catDropdown__item">Choice 6
+    </div>
+
+    <div class="catDropdown__bucket">
+        <p class="catDropdown__text">Bucket 4</p>
+        <input type="radio" class="catDropdown__item">Choice 1<br>
+        <input type="radio" class="catDropdown__item">Choice 2
+    </div>
+</section>
+
+<section class="catDropdown" id="cat4Dropdown">
+    <div class="catDropdown__bucket">
+        <p class="catDropdown__text">Bucket 1</p>
+        <input type="radio" class="catDropdown__item">Choice 1<br>
+        <input type="radio" class="catDropdown__item">Choice 2<br>
+        <input type="radio" class="catDropdown__item">Choice 3<br>
+        <input type="radio" class="catDropdown__item">Choice 4<br>
+        <input type="radio" class="catDropdown__item">Choice 5<br>
+        <input type="radio" class="catDropdown__item">Choice 6<br>
+        <input type="radio" class="catDropdown__item">Choice 7
+    </div>
+
+    <div class="catDropdown__bucket">
+        <p class="catDropdown__text">Bucket 1</p>
+        <input type="radio" class="catDropdown__item">Choice 1<br>
+        <input type="radio" class="catDropdown__item">Choice 2<br>
+        <input type="radio" class="catDropdown__item">Choice 3<br>
+        <input type="radio" class="catDropdown__item">Choice 4<br>
+        <input type="radio" class="catDropdown__item">Choice 5<br>
+        <input type="radio" class="catDropdown__item">Choice 6<br>
+        <input type="radio" class="catDropdown__item">Choice 7
+    </div>
+
+    <div class="catDropdown__bucket">
+        <p class="catDropdown__text">Bucket 2</p>
+        <input type="radio" class="catDropdown__item">Choice 1<br>
+        <input type="radio" class="catDropdown__item">Choice 2<br>
+        <input type="radio" class="catDropdown__item">Choice 3<br>
+        <input type="radio" class="catDropdown__item">Choice 4<br>
+        <input type="radio" class="catDropdown__item">Choice 5
+    </div>
+
+    <div class="catDropdown__bucket">
+        <p class="catDropdown__text">Bucket 3</p>
+        <input type="radio" class="catDropdown__item">Choice 1<br>
+        <input type="radio" class="catDropdown__item">Choice 2<br>
+        <input type="radio" class="catDropdown__item">Choice 3<br>
+        <input type="radio" class="catDropdown__item">Choice 4<br>
+        <input type="radio" class="catDropdown__item">Choice 5<br>
+        <input type="radio" class="catDropdown__item">Choice 6
+    </div>
+
+    <div class="catDropdown__bucket">
+        <p class="catDropdown__text">Bucket 4</p>
+        <input type="radio" class="catDropdown__item">Choice 1<br>
+        <input type="radio" class="catDropdown__item">Choice 2
+    </div>
+</section>
+
+<section class="catDropdown" id="cat5Dropdown">
     <div class="catDropdown__bucket">
         <p class="catDropdown__text">Bucket 1</p>
         <input type="radio" class="catDropdown__item">Choice 1<br>
